[package]
name = "mmdeploy-sys"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
description = "FFI bindings to MMDeploy"
repository = "https://github.com/liu-mengyang/rust-mmdeploy-sys"
keywords = ["mmdeploy", "deployment"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
static = []
build = ["static"]

[dependencies]

[build-dependencies]
bindgen = "0.60.1"